--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -1,15 +1,15 @@
 #-----------------------------------------------------------------------------
 #@TYPE: Machine
-#@NAME: FIC GTA01 (Neo1973)
-#@DESCRIPTION: Machine configuration for the FIC Neo1973/1 GSM phone
+#@NAME: FIC GTA02 (Neo1973)
+#@DESCRIPTION: Machine configuration for the FIC Neo1973/2 GSM phone
 #-----------------------------------------------------------------------------
 
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-gta01"
+PREFERRED_PROVIDER_virtual/kernel = "linux-gta02"
 
-MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone"
+MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone wifi"
 
 MACHINE_EXTRA_RDEPENDS = "alsa-state"
 
@@ -23,11 +23,10 @@ MACHINE_EXTRA_RRECOMMENDS = "\
   kernel-module-ext2 \
   alsa-state"
 
-# do not outcomment, we bypass the sysvinit.bb logic here -- see FIC GTA01 inittab
-#SERIAL_CONSOLE = "115200 ttySAC0"
+SERIAL_CONSOLE = "115200 ttySAC2"
 
 # used by some images
-ROOT_FLASH_SIZE = "60"
+ROOT_FLASH_SIZE = "256"
 
 # extra jffs2 tweaks
 EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 -n"
