conf/machine/dm7025.conf: build traditional image in opendreambox-1.4

--- a/conf/machine/dm7025.conf
+++ b/conf/machine/dm7025.conf
@@ -14,9 +14,9 @@ BOOTSTRAP_EXTRA_RDEPENDS = "kernel dreambox-dvb-modules kernel-module-stv0299 \
 	kernel-module-reiserfs 	kernel-module-scsi-mod	kernel-module-sd-mod \
 	kernel-module-sg	kernel-module-sr-mod	kernel-module-usb-storage \
 	kernel-module-usbcore	kernel-module-usbhid	kernel-module-usbmon \
-	kernel-module-xfs 	kernel-module-squashfs	kernel-module-sqlzma \
-	kernel-module-unlzma	kernel-module-loop	unionfs-modules \
-	gst-plugin-dvbmediasink	dreambox-boottool	gst-plugin-fluendo-mpegdemux"
+	kernel-module-xfs 	gst-plugin-dvbmediasink gst-plugin-fluendo-mpegdemux "
+
+BOOTSTRAP_EXTRA_RDEPENDS += ${@bb.data.getVar('DISTRO_VERSION', d, 1) != "1.4.0" and "kernel-module-squashfs kernel-module-sqlzma kernel-module-unlzma kernel-module-loop unionfs-modules dreambox-boottool " or " "}
 
 TARGET_FPU = "soft"
 OLDEST_KERNEL = "2.6.9"
@@ -57,41 +57,56 @@ EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x4000 -n -l "
 KERNEL_VERSION = 2.6.12.6
 
 IMAGE_CMD_jffs2 = "\
-	install -d ${IMAGE_ROOTFS}/boot/bin; \
-	install -d ${IMAGE_ROOTFS}/boot/dev; \
-	install -d ${IMAGE_ROOTFS}/boot/flash; \
-	install -d ${IMAGE_ROOTFS}/boot/squashfs; \
-	install -d ${IMAGE_ROOTFS}/boot/root; \
-	mv ${IMAGE_ROOTFS}/boot/boottool ${IMAGE_ROOTFS}/boot/bin; \
-	install -d ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
-	install -d ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/drivers/block; \
-	mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/fs/squashfs ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
-	mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/fs/unionfs.ko ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
-	mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/drivers/block/loop.ko ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/drivers/block; \
-	\
-	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
-		--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-		${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
-	\
-	install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta; \
-	cd ${IMAGE_ROOTFS}; \
-	for i in `find -maxdepth 3 -name enigma2 | xargs`; \
-	do \
-		install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/enigma2}; \
-		mv $i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/enigma2}; \
-	done; \
-	for i in `find -type d -name extra | xargs`; \
-	do \
-		install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
-		mv $i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
-	done; \
-	mksquashfs ${IMAGE_ROOTFS}/* ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/squashfs -root-owned -le -noappend; \
-	\
-	mkfs.jffs2 --root=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME} --faketime \
-		--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
-		${EXTRA_IMAGECMD}; \
-	rm -R ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}; \
-	\
+	if [ "${@bb.data.getVar('DISTRO_VERSION', d, 1)}" != "1.4.0" ]; \
+	then \
+		for i in bin dev mnt/flash mnt/squashfs mnt/root; \
+		do \
+			install -d ${IMAGE_ROOTFS}/boot/$i; \
+		done; \
+		install -d ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
+		install -d ${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/drivers/block; \
+		mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/fs/squashfs \
+			${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
+		mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/fs/unionfs.ko \
+			${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/fs; \
+		mv ${IMAGE_ROOTFS}/lib/modules/${KERNEL_VERSION}/kernel/drivers/block/loop.ko \
+			${IMAGE_ROOTFS}/boot/lib/modules/${KERNEL_VERSION}/kernel/drivers/block; \
+		mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+			${EXTRA_IMAGECMD}; \
+		rm -rf ${IMAGE_ROOTFS}/boot/*; \
+		\
+		install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta; \
+		cd ${IMAGE_ROOTFS}; \
+		for i in `find -maxdepth 3 -name enigma2 | xargs`; \
+		do \
+			install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/enigma2}; \
+			mv $i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/enigma2}; \
+		done; \
+		for i in `find -type d -name extra | xargs`; \
+		do \
+			install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
+			mv $i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
+		done; \
+		cat ${IMAGE_ROOTFS}/etc/fstab | grep -v "/dev/mtdblock/2" > ${IMAGE_ROOTFS}/etc/fstab_neu; \
+		mv -f ${IMAGE_ROOTFS}/etc/fstab_neu ${IMAGE_ROOTFS}/etc/fstab; \
+		mksquashfs ${IMAGE_ROOTFS}/* ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/squashfs \
+			-root-owned -le -noappend; \
+		\
+		mkfs.jffs2 --root=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME} --faketime \
+			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+			${EXTRA_IMAGECMD}; \
+		rm -rf ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}; \
+	else \
+		mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+			${EXTRA_IMAGECMD}; \
+		rm -rf ${IMAGE_ROOTFS}/boot/*; \
+		\
+		mkfs.jffs2 --root=${IMAGE_ROOTFS} --faketime \
+			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+			${EXTRA_IMAGECMD}; \
+	fi; \
 	buildimage ${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
 		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
 		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
