angstrom: readd big mount due to udev init scripts

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -318,6 +318,7 @@ DISTRO_EXTRA_RDEPENDS += "\
     ${@base_contains("MACHINE_FEATURES", "screen", "psplash", "",d)} \   
     angstrom-version \
     ipkg ipkg-collateral \
+    util-linux-mount util-linux-umount \
     avahi-daemon \
     avahi-autoipd \
     ${EXTRA_STUFF} \
