--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -350,6 +350,10 @@ KERNELORG_MIRROR = "http://kernel.org/"
 #  export DEBIAN_MIRROR = "ftp://ftp.de.debian.org/debian/pool"
 #     into your local.conf
 
+FETCHCMD_svn = "/usr/bin/env svn"
+FETCHCMD_cvs = "/usr/bin/env cvs"
+FETCHCMD_wget = "/usr/bin/env wget -t 5"
+
 FETCHCOMMAND = "ERROR, this must be a BitBake bug"
 FETCHCOMMAND_wget = "/usr/bin/env wget -t 5 --passive-ftp -P ${DL_DIR} ${URI}"
 FETCHCOMMAND_cvs = "/usr/bin/env cvs -d${CVSROOT} co ${CVSCOOPTS} ${CVSMODULE}"
