tosa: added wifi to MACHINE_FEATURES

--- a/conf/machine/include/zaurus-2.6.conf
+++ b/conf/machine/include/zaurus-2.6.conf
@@ -28,7 +28,7 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PCMCIA_MANAGER ?= "pcmciautils"
 
 MACHINE_FEATURES = "kernel26 apm alsa pcmcia irda usbgadget keyboard touchscreen screen"
-MACHINE_FEATURES_append_tosa  = " usbhost usbwlanng "
+MACHINE_FEATURES_append_tosa  = " usbhost wifi "
 MACHINE_FEATURES_append_akita = " usbhost "
 MACHINE_FEATURES_append_spitz = " usbhost ext2 "
 
