conf/machine/dm7025.conf: fix mtdblock2 fstab entry

--- a/conf/machine/dm7025.conf
+++ b/conf/machine/dm7025.conf
@@ -88,7 +88,7 @@ IMAGE_CMD_jffs2 = "\
 			install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
 			mv $i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/${i%%/extra}; \
 		done; \
-		cat ${IMAGE_ROOTFS}/etc/fstab | grep -v "/dev/mtdblock/2" > ${IMAGE_ROOTFS}/etc/fstab_neu; \
+		cat ${IMAGE_ROOTFS}/etc/fstab | sed 's/^\/dev\/mtdblock\/2/\/dev\/root/;' > ${IMAGE_ROOTFS}/etc/fstab_neu; \
 		mv -f ${IMAGE_ROOTFS}/etc/fstab_neu ${IMAGE_ROOTFS}/etc/fstab; \
 		mksquashfs ${IMAGE_ROOTFS}/* ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/squashfs \
 			-root-owned -le -noappend; \
