bitbake.conf: Switch OPIE prefix to /usr. * With the other latest changes, this produces bootable system, still needs more detailed testing. * The next stage is fix data/plugin file location. * Partially closes #2254.

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -319,8 +319,8 @@ BOOTSTRAP_EXTRA_RRECOMMENDS = ""
 export QTDIR = "${STAGING_DIR}/${HOST_SYS}/qt2"
 export QPEDIR = "${STAGING_DIR}/${HOST_SYS}"
 export OPIEDIR = "${STAGING_DIR}/${HOST_SYS}"
-export palmtopdir = "/opt/QtPalmtop"
-export palmqtdir = "/opt/QtPalmtop"
+export palmtopdir = "${prefix}"
+export palmqtdir = "${prefix}"
 
 ##################################################################
 # Download locations and utilities.
