wl500g.conf: Add MACHINE_FEATURES.

--- a/conf/machine/wl500g.conf
+++ b/conf/machine/wl500g.conf
@@ -3,4 +3,6 @@
 #@DESCRIPTION: Machine configuration for the MIPS based WL500g(x) devices
 
 TARGET_ARCH = "mipsel"
+MACHINE_FEATURES = "kernel26 usbhost wifi ext2"
+
 TARGET_CC_ARCH = "-Os -mips2"
