motorola ezx phones: add an include that sets the basic stuff, remove killswitch from a1200, e680 because the machines need different defconfigs

--- a/conf/machine/e680.conf
+++ b/conf/machine/e680.conf
@@ -1,2 +1,5 @@
-WARNING:="${@bb.fatal('\n*\n*\n*    Sorry, There is no dedicated configuration for the Motorola EZX E680,\n*    because \
-of the similarities between A780 and E680-clamshell series. Use MACHINE = \"a780\".\n*\n*\n')}"
+#@TYPE: Machine
+#@NAME: Motorola EZX A1200, Motorola EZX A780, Motorola EZX E680, Motorola EZX E680i
+#@DESCRIPTION: Machine configuration for the Motorola GSM phones A1200, A780, E680, and E680i
+
+require conf/machine/include/motorola-ezx-base.inc
