angstrom: add support for htcwallaby and htctornado

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -13,7 +13,7 @@ DISTRO_REVISION = "46"
 require conf/distro/include/sane-srcdates.inc
 
 #This is needed to get a correct PACKAGE_ARCH for packages that have PACKAGE_ARCH = ${MACHINE_ARCH}
-ARM_ABI = "${@['','oabi'][bb.data.getVar('MACHINE',d) in ['collie','h3600', 'h3800', 'simpad']]}"
+ARM_ABI ?= "${@['','oabi'][bb.data.getVar('MACHINE',d) in ['collie','h3600', 'h3800', 'simpad', 'htcwallaby']]}"
 require conf/distro/include/angstrom${ARM_ABI}.inc
 
 #Images built can have to modes:
@@ -54,6 +54,7 @@ FEED_ARCH_h2200		= "armv5te"
 FEED_ARCH_h3900		= "armv5te"
 FEED_ARCH_h4000		= "armv5te"
 FEED_ARCH_h5000		= "armv5te"
+FEED_ARCH_htctornado    = "armv5te"
 FEED_ARCH_htcuniversal 	= "armv5te"
 FEED_ARCH_hx2000	= "armv5te"
 FEED_ARCH_hx4700	= "armv5te"
@@ -88,6 +89,7 @@ FEED_ARCH_collie        = "arm-oabi"
 FEED_ARCH_h3600         = "arm-oabi"
 FEED_ARCH_h3800         = "arm-oabi"
 FEED_ARCH_simpad        = "arm-oabi"
+FEED_ARCH_htcwallaby    = "arm-oabi"
 
 #Tweak packaging for strongarm machines since they can't use EABI
 
