angstrom: add FEED_ARCH for compulab-pxa270

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -50,6 +50,7 @@ FEED_ARCH_aximx50	= "armv5te"
 FEED_ARCH_akita		= "armv5te"
 FEED_ARCH_at91sam9263ek = "armv5te"
 FEED_ARCH_c7x0		= "armv5te"
+FEED_ARCH_compulab-pxa270 = "armv5te"
 FEED_ARCH_h2200		= "armv5te"
 FEED_ARCH_h3900		= "armv5te"
 FEED_ARCH_h4000		= "armv5te"
