--- a/conf/machine/sarge-at91.conf
+++ b/conf/machine/sarge-at91.conf
@@ -16,4 +16,8 @@ MACHINE_FEATURES = "kernel26"
 
 require conf/machine/include/tune-arm920t.conf
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-sarge"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
+
+# device has own patchset for u-boot 1.1.6
+PREFERRED_VERSION_u-boot = "1.1.6"
+PREFERRED_VERSION_linux  = "2.6.21"
