htcwallaby: remove comment that makes bitbake barf

--- a/conf/machine/htcwallaby.conf
+++ b/conf/machine/htcwallaby.conf
@@ -10,7 +10,7 @@ PACKAGE_EXTRA_ARCHS = "armv4 "
 
 require conf/machine/include/tune-strongarm.conf
 
-ROOT_FLASH_SIZE = "16" #?
+ROOT_FLASH_SIZE = "16" 
 VOLATILE_STORAGE_SIZE = "32"
 GUI_MACHINE_CLASS = "smallscreen"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda usbgadget screen phone"
@@ -21,6 +21,8 @@ MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda usbgadget screen phone"
 PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
+
+
 
 #
 # Modules autoload and other boot properties
