sharprom-compatible: use sanity and changed DISTRO_VERSION so builds does not break on 2.4-crapix kernels - close #2581

--- a/conf/distro/sharprom-compatible.conf
+++ b/conf/distro/sharprom-compatible.conf
@@ -6,7 +6,7 @@
 #@REQUIREMENTS: Rename arm-linux-gcc|g++ to arm-linux-gcc-2.95 and rename arm-linux-ld to arm-linux-ld-2.11.2.
 #@REQUIREMENTS: /usr/local/arm/2.95.3/bin must be in your path, like "export PATH=$PATH:/usr/local/arm/2.95.3/bin/"
 
-INHERIT += " package_ipk debian"
+INHERIT += " package_ipk debian sanity"
 
 #
 # Zaurus
@@ -29,7 +29,7 @@ export TARGET_CPPFLAGS = "-I${STAGING_DIR}/${TARGET_SYS}/include"
 # Base
 #
 DISTRO_NAME = "SharpROM"
-DISTRO_VERSION = "3.1 compatible"
+DISTRO_VERSION = "3.1-compatible"
 DISTRO_TYPE = "debug"
 
 PREFERRED_PROVIDER_virtual/arm-linux-gcc-2.95 = "sharprom-toolchain-native" 
