bitbake.conf: Set palmtopdir = "${libdir}/opie". * Per #2254.

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -319,8 +319,8 @@ BOOTSTRAP_EXTRA_RRECOMMENDS = ""
 export QTDIR = "${STAGING_DIR}/${HOST_SYS}/qt2"
 export QPEDIR = "${STAGING_DIR}/${HOST_SYS}"
 export OPIEDIR = "${STAGING_DIR}/${HOST_SYS}"
-export palmtopdir = "${prefix}"
-export palmqtdir = "${prefix}"
+export palmtopdir = "${libdir}/opie"
+export palmqtdir = "${palmtopdir}"
 
 ##################################################################
 # Download locations and utilities.
