--- a/conf/machine/h2200.conf
+++ b/conf/machine/h2200.conf
@@ -26,7 +26,7 @@ PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 
-MACHINE_EXTRA_RDEPENDS = "h2200-bootloader"
+MACHINE_EXTRA_RDEPENDS = "h2200-bootloader udev-hostap-cs-vcc-workaround"
 EXTRA_IMAGECMD_jffs2 = "--pad --eraseblock=0x4000"
 
 #
