opendreambox-1.4: pin down zope,twisted,twisted-web,twisted-web2 versions

--- a/conf/distro/opendreambox-1.4.conf
+++ b/conf/distro/opendreambox-1.4.conf
@@ -19,5 +19,12 @@ PREFERRED_VERSION_python = "2.4.4"
 PREFERRED_VERSION_ipkg = "0.99.154"
 PREFERRED_VERSION_busybox = "1.01"
 
+PREFERRED_VERSION_zope-interface = "3.1.0c1"
+PREFERRED_VERSION_zope-interface-native = "3.1.0c1"
+PREFERRED_VERSION_twisted = "2.4.0"
+PREFERRED_VERSION_twisted-native = "2.4.0"
+PREFERRED_VERSION_twisted-web = "0.5.0"
+PREFERRED_VERSION_twisted-web2 = "0.2.0"
+
 # we need libsigc++-1.2 1.2.5
 PREFERRED_VERSION_libsigc++-1.2 = "1.2.5"
