--- a/conf/machine/fsg3be.conf
+++ b/conf/machine/fsg3be.conf
@@ -10,13 +10,14 @@ MACHINE_ARCH = "ixp4xxbe"
 
 OVERRIDES = "local:${MACHINE}:ixp4xxbe:ixp4xx:${DISTRO}:${TARGET_OS}:${TARGET_ARCH}:build-${BUILD_OS}:fail-fast:pn-${PN}"
 
-require conf/machine/include/ixp4xx.conf
-
 # Match the vendor's latest kernel
-PREFERRED_VERSION_ixp4xx-kernel = "2.6.18"
+PREFERRED_PROVIDER_virtual/kernel ?= "fsg3-kernel"
+PREFERRED_VERSION_fsg3-kernel = "2.6.18"
 KERNEL_CCSUFFIX = "-3.4.4+csl-arm-2005q3"
 PREFERRED_PROVIDER_virtual/${TARGET_PREFIX}gcc-3.4.4+csl-arm-2005q3 = "gcc-cross-kernel-3.4.4"
 PREFERRED_VERSION_virtual/${TARGET_PREFIX}gcc-3.4.4+csl-arm-2005q3 = "csl-arm-2005q3"
+
+require conf/machine/include/ixp4xx.conf
 
 # No room for jffs2 - the rootfs needs to be installed directly to disk
 IMAGE_FSTYPES = "tar.gz"
