conf/machine/dm7025.conf: don't mess up rootfs while creating image

--- a/conf/machine/dm7025.conf
+++ b/conf/machine/dm7025.conf
@@ -59,6 +59,7 @@ KERNEL_VERSION = 2.6.12.6
 IMAGE_CMD_jffs2 = "\
 	if [ "${@bb.data.getVar('DISTRO_VERSION', d, 1)}" != "1.4.0" ]; \
 	then \
+		install -d ${DEPLOY_DIR_IMAGE}/boot_tmp; \
 		for i in bin dev mnt/flash mnt/squashfs mnt/root; \
 		do \
 			install -d ${IMAGE_ROOTFS}/boot/$i; \
@@ -74,7 +75,7 @@ IMAGE_CMD_jffs2 = "\
 		mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
 			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
 			${EXTRA_IMAGECMD}; \
-		rm -rf ${IMAGE_ROOTFS}/boot/*; \
+		mv ${IMAGE_ROOTFS}/boot/* ${DEPLOY_DIR_IMAGE}/boot_tmp; \
 		\
 		install -d ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta; \
 		cd ${IMAGE_ROOTFS}; \
@@ -96,7 +97,12 @@ IMAGE_CMD_jffs2 = "\
 		mkfs.jffs2 --root=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME} --faketime \
 			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 			${EXTRA_IMAGECMD}; \
+		\
+		for i in ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}/delta/*; \ 
+			do cp -R $i ${IMAGE_ROOTFS}; done; \
 		rm -rf ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}; \
+		rm -rf ${IMAGE_ROOTFS}/boot; \
+		mv ${DEPLOY_DIR_IMAGE}/boot_tmp ${IMAGE_ROOTFS}/boot; \
 	else \
 		mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
 			--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
