Fixed Palm Zire 72 battery autoload

--- a/conf/machine/palmz72.conf
+++ b/conf/machine/palmz72.conf
@@ -28,7 +28,7 @@ MACHINE_EXTRA_RRECOMMENDS = "kernel-module-i2c-pxa \
 			     kernel-module-palmz72-battery"
 
 module_autoload_sa1100-rtc = "sa1100-rtc"
-module_autoload_palmz72-battery = "palmz72-battery"
+module_autoload_palmz72_battery = "palmz72_battery"
 module_autoload_i2c-dev = "i2c-dev"
 module_autoload_i2c-pxa = "i2c-pxa"
 module_autoload_g_ether = "g_ether"
