--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -21,6 +21,11 @@ MACHINE_EXTRA_RRECOMMENDS = "\
   kernel-module-gta01kbd \
   kernel-module-s3cmci \
   kernel-module-ext2 \
+  kernel-module-vfat \
+  kernel-module-snd-soc-neo1973-wm8753 \
+  kernel-module-snd-soc-smdk2440 \
+  kernel-module-nls-iso8859-1 \
+  kernel-module-nls-cp437 \
   alsa-state"
 
 # do not outcomment, we bypass the sysvinit.bb logic here -- see FIC GTA01 inittab
@@ -30,7 +35,7 @@ MACHINE_EXTRA_RRECOMMENDS = "\
 ROOT_FLASH_SIZE = "60"
 
 # extra jffs2 tweaks
-EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 -n"
+EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 --pad -n"
 
 # build tools
 EXTRA_IMAGEDEPENDS += "sjf2410-linux-native"
