Palms: unification of configs

--- a/conf/machine/palmtx.conf
+++ b/conf/machine/palmtx.conf
@@ -2,14 +2,9 @@
 #@NAME: Palm TX
 #@DESCRIPTION: Machine configuration for the Palm TX
 
-TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv4t armv5te"
+require conf/machine/include/palm.conf
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-hackndev-2.6"
-
-PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
-
-MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia irda bluetooth wifi ext2 usbgadget screen"
+MACHINE_FEATURES += "pcmcia wifi"
 
 ROOT_FLASH_SIZE = "100"
 
@@ -17,16 +12,7 @@ SERIAL_CONSOLE = "115200 ttyS0"
 
 GUI_MACHINE_CLASS = "bigscreen"
 
-# Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
-require conf/machine/include/tune-xscale.conf
-
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
                            kernel-module-pxapwm-bl \
                            kernel-module-wm97xx-ts \
                            kernel-module-palmtx-battery"
-
-module_autoload_sa1100-rtc = "sa1100-rtc"
-module_autoload_pxa27x-keyboard = "pxa27x-keyboard"
-module_autoload_pxapwm-bl = "pxapwm-bl"
-module_autoload_wm97xx-ts = "wm97xx-ts"
-module_autoload_palmtx-battery = "palmtx-battery"
