--- a/conf/machine/palmz72.conf
+++ b/conf/machine/palmz72.conf
@@ -2,14 +2,7 @@
 #@NAME: Palm Zire 72
 #@DESCRIPTION: Machine configuration for the Palm Zire 72
 
-TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "arm armv4t armv5te"
-
-PREFERRED_PROVIDER_virtual/kernel = "linux-hackndev-2.6"
-
-PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
-
-MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia irda ext2 usbgadget screen"
+require conf/machine/include/palm.conf
 
 ROOT_FLASH_SIZE = "100"
 
@@ -18,18 +11,13 @@ SERIAL_CONSOLE = "115200 ttyS0"
 GUI_MACHINE_CLASS = "bigscreen"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
-require conf/machine/include/tune-xscale.conf
 require conf/machine/include/tune-thumb.conf
 
-MACHINE_EXTRA_RRECOMMENDS = "kernel-module-i2c-pxa \
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-i2c-pxa \
 			     kernel-module-i2c-core \
 			     kernel-module-i2c-algo-pxa \
 			     kernel-module-i2c-dev \
 			     kernel-module-palmz72-battery"
 
-module_autoload_sa1100-rtc = "sa1100-rtc"
-module_autoload_palmz72_battery = "palmz72_battery"
-module_autoload_i2c-dev = "i2c-dev"
-module_autoload_i2c-pxa = "i2c-pxa"
 module_autoload_g_ether = "g_ether"
 
