fic-gta0[0|1].conf: move recommendation of alsa-state(s) from task-openmoko to machine configuration

--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -13,7 +13,7 @@ MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone wifi"
 
 MACHINE_EXTRA_RDEPENDS = "alsa-state"
 
-# package gta01 specific modules
+# package machine specific modules
 MACHINE_EXTRA_RRECOMMENDS = "\
   kernel-module-gta01-pm-bt  \
   kernel-module-gta01-pm-gps \
@@ -21,7 +21,15 @@ MACHINE_EXTRA_RRECOMMENDS = "\
   kernel-module-gta01kbd \
   kernel-module-s3cmci \
   kernel-module-ext2 \
-  alsa-state"
+  kernel-module-vfat \
+  kernel-module-snd-soc-neo1973-wm8753 \
+  kernel-module-snd-soc-smdk2440 \
+  kernel-module-nls-iso8859-1 \
+  kernel-module-nls-cp437 \
+  \
+  alsa-state \
+  alsa-states \
+"
 
 SERIAL_CONSOLE = "115200 ttySAC2"
 
