h4000, htcblueangel: Add pcmciautils to MACHINE_EXTRA. * These machines have ACX100 internally connected to PCMCIA, and now there's proper CardServices driver for it. At least while it is in debugging phase, it is beneficial to have pcmciautils around. Don't pcmcia to MACHINE_FEATURES, as the meaning of that is machine having full-fledges PCMCIA support, and leads to installation of several additiona packages which won't useful in this case.

--- a/conf/machine/htcblueangel.conf
+++ b/conf/machine/htcblueangel.conf
@@ -23,7 +23,7 @@ PREFERRED_VERSION_linux-handhelds-2.6 ?= "2.6.19-hh8"
 PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
-MACHINE_EXTRA_RDEPENDS = "acx-firmware"
+MACHINE_EXTRA_RDEPENDS = "acx-firmware ${PCMCIA_MANAGER}"
 MACHINE_EXTRA_RRECOMMENDS = "kernel-module-blueangel_pcmcia \
 			     kernel-module-blueangel_audio \
 			     kernel-module-blueangel_rom \
