--- a/conf/machine/h4000.conf
+++ b/conf/machine/h4000.conf
@@ -13,7 +13,7 @@ require conf/machine/include/tune-xscale.conf
 ROOT_FLASH_SIZE = "32"
 VOLATILE_STORAGE_SIZE = "64"
 GUI_MACHINE_CLASS = "smallscreen"
-MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda bluetooth wifi usbgadget  screen"
+MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda bluetooth wifi usbgadget screen"
 
 #
 # Software/packages selection
@@ -22,7 +22,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
-MACHINE_EXTRA_RDEPENDS = "tiinit acx-firmware"
+MACHINE_EXTRA_RDEPENDS = "tiinit acx-firmware ${PCMCIA_MANAGER}"
 MACHINE_EXTRA_RRECOMMENDS = "kernel-module-snd-h4000-audio \
                              kernel-module-i2c-pxa \
                              kernel-module-acx \
