--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -468,7 +468,7 @@ IMAGE_ROOTFS_SIZE_ext3.gz ?= "65536"
 OES_BITBAKE_CONF = "1"
 
 ##################################################################
-# Task-base stuff
+# Machine properties and task-base stuff
 ##################################################################
 
 MACHINE_FEATURES ?= "kernel26"
@@ -477,7 +477,13 @@ DISTRO_FEATURES ?= ""
 # This is used to limit what packages goes into images built, so set big by default
 ROOT_FLASH_SIZE ?= "256"
 
-GUI_MACHINE_CLASS ?= "smallscreen"
+MACHINE_GUI_CLASS ?= "smallscreen"
+# GUI_MACHINE_CLASS is deprecated, please use MACHINE_GUI_CLASS instead
+GUI_MACHINE_CLASS ?= "${MACHINE_GUI_CLASS}"
+MACHINE_DISPLAY_WIDTH_PIXELS ?= "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS ?= "320"
+MACHINE_DISPLAY_ORIENTATION ?= "0"
+MACHINE_DISPLAY_BPP ?= "16"
 
 DISTRO_EXTRA_RDEPENDS ?= ""
 DISTRO_EXTRA_RRECOMMENDS ?= ""
