Updated installed modules list for Palm Zire 72 * Removed module which is added by task-base and depends * Added touchscreen module

--- a/conf/machine/palmz72.conf
+++ b/conf/machine/palmz72.conf
@@ -14,9 +14,9 @@ GUI_MACHINE_CLASS = "bigscreen"
 require conf/machine/include/tune-thumb.conf
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-i2c-pxa \
-			     kernel-module-i2c-core \
 			     kernel-module-i2c-algo-pxa \
 			     kernel-module-i2c-dev \
+			     kernel-module-wm97xx-ts \		
 			     kernel-module-palmz72-battery"
 
 module_autoload_g_ether = "g_ether"
