aximx50.conf, aximx50v.conf: Split up configs for QVGA vs VGA aximx50 models.

--- a/conf/machine/aximx50.conf
+++ b/conf/machine/aximx50.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Axim x50/x50v/x51/x51v
-#@DESCRIPTION: Machine configuration for the Dell Axim x50/51(v) with a pxa27x CPU
+#@NAME: Axim x50/x51
+#@DESCRIPTION: Machine configuration for the Dell Axim x50/x51 with a pxa27x CPU
 
 #
 # Hardware-based properties
@@ -16,7 +16,7 @@ require conf/machine/include/tune-xscale.conf
 
 ROOT_FLASH_SIZE = "256"
 VOLATILE_STORAGE_SIZE = "64"
-GUI_MACHINE_CLASS = "bigscreen" # caveat: only "v" models are VGA
+GUI_MACHINE_CLASS ?= "smallscreen"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda wifi usbgadget screen"
 
 #
