asus620.conf: Typo fix.

--- a/conf/machine/asus620.conf
+++ b/conf/machine/asus620.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Asus MyPal 620
-#@DESCRIPTION: Machine configuration for the Asus MyPal 620
+#@NAME: Asus MyPal A620
+#@DESCRIPTION: Machine configuration for the Asus MyPal A620
 
 #
 # Hardware-based properties
