h4000.conf, htcblueangel.conf: Blacklist acx from autoloading while PCMCIA support is buggy yet. * P.S. This doesn't really work as OE's module handling is broken.

--- a/conf/machine/h4000.conf
+++ b/conf/machine/h4000.conf
@@ -35,6 +35,7 @@ module_autoload_snd-pcm-oss = "snd-pcm-oss"
 module_autoload_snd-mixer-oss = "snd-mixer-oss"
 module_autoload_snd-h4000_audio = "snd-h4000_audio"
 module_autoload_g_ether = "g_ether"
+module_conf_acx = "blacklist acx"
 
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
 USE_VT = "0"
