--- a/conf/machine/htcblueangel.conf
+++ b/conf/machine/htcblueangel.conf
@@ -49,7 +49,7 @@ module_autoload_blueangel_audio   = "blueangel_audio"
 module_autoload_bluenagel_leds    = "bleangel_leds"
 module_autoload_hci_uart          = "hci_uart"
 module_autoload_snd-mixer-oss     = "snd-mixer-oss"
-
+module_conf_acx = "blacklist acx"
 
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
 USE_VT = "0"
