linux-handhelds-2.6: Remove adhoc ripping of kernel-image modules. * Instead, make angstrom distro which wants so, not install them for a couple of adhocly selected devices. * See http://projects.linuxtogo.org/pipermail/openembedded-devel/2007-March/001688.html

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -128,6 +128,8 @@ PCMCIA_MANAGER = "pcmciautils"
 
 #Preferred version for the kernel on various machines
 PREFERRED_VERSION_linux-handhelds-2.6               ?= "2.6.21-hh11"
+RDEPENDS_kernel-base_hx4700 = ""
+RDEPENDS_kernel-base_htcuniversal = ""
 
 PREFERRED_VERSION_linux_at91sam9263ek               ?= "2.6.20"
 
