--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -98,6 +98,7 @@ PACKAGE_EXTRA_ARCHS_collie = "arm-oabi"
 PACKAGE_EXTRA_ARCHS_h3600  = "arm-oabi"
 PACKAGE_EXTRA_ARCHS_h3800  = "arm-oabi"
 PACKAGE_EXTRA_ARCHS_simpad = "arm-oabi"
+PACKAGE_EXTRA_ARCHS_htcwallaby = "arm-oabi"
 
 FEED_URIS += " \
 		no-arch##${ANGSTROM_URI}/unstable/feed/all \
@@ -160,7 +161,7 @@ PREFERRED_VERSION_osb-nrcore       = "0.5.2+svn${SRCDATE}"
 PREFERRED_PROVIDER_virtual/xserver  ?= "xserver-kdrive"
 PREFERRED_PROVIDER_xserver          ?= "xserver-kdrive"
 
-PREFERRED_VERSION_xserver-kdrive    ?= "1.2.0"
+PREFERRED_VERSION_xserver-kdrive    ?= "1.3.0.0"
 PREFERRED_VERSION_libxrandr         ?= "1.2.1"
 PREFERRED_VERSION_xrandr            ?= "1.2.0" 
 PREFERRED_VERSION_randrproto        ?= "1.2.1"
@@ -303,7 +304,7 @@ PREFERRED_PROVIDER_task-bootstrap = "task-bootstrap"
 #EXTRA_STUFF_append_akita         += "altboot"
 #EXTRA_STUFF_append_poodle        += "altboot"
 #EXTRA_STUFF_append_tosa          += "altboot"
-EXTRA_STUFF_append_spitz         += "altboot"
+#EXTRA_STUFF_append_spitz         += "altboot"
 
 
 # do some task-base stuff here
