angstrom-2007.1.conf : fix to poppler 0.5.4 as 0.5.9 doesnt compile and cvs versions contain API changes.

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -150,6 +150,10 @@ PREFERRED_VERSION_pango            = "1.16.4"
 PREFERRED_VERSION_atk              = "1.10.3"
 PREFERRED_VERSION_gtk+             = "2.10.12"
 
+# newer poppler cvs breaks some apps, fix until popper 6 and apps
+# catch up with api changes
+PREFERRED_VERSION_poppler          = "0.5.4"
+
 # older gtk-webcore releases don't work on ARM/EABI
 # We need to switch to a fixed SRCDATE or release as soon as possible 
 PREFERRED_VERSION_osb-browser      = "0.5.0+svn${SRCDATE}"
