--- a/conf/machine/palmt650.conf
+++ b/conf/machine/palmt650.conf
@@ -1,15 +1,17 @@
 #@TYPE: Machine
 #@NAME: Palm Treo 650
-#@DESCRIPTION: Machine configuration for the Palm TX
+#@DESCRIPTION: Machine configuration for the Palm Treo 650
 
 require conf/machine/include/palm.conf
 
 ROOT_FLASH_SIZE = "100"
 
-SERIAL_CONSOLE = "115200 ttyS0"
+SERIAL_CONSOLE = "115200 ttyS1"
 
 GUI_MACHINE_CLASS = "bigscreen"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
                            kernel-module-pxapwm-bl \
                            kernel-module-wm97xx-ts"
+
+module_autoload_g_ether = "g_ether"
