--- a/conf/machine/palmtt2.conf
+++ b/conf/machine/palmtt2.conf
@@ -1,15 +1,2 @@
-#@TYPE: Machine
-#@NAME: Palm Tungsten T2
-#@DESCRIPTION: Machine configuration for Palm Zire 71
-
-TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv5te"
-
-PREFERRED_PROVIDER_xserver = "xserver-kdrive"
-PREFERRED_PROVIDER_virtual/kernel = "linux-palm-omap1"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
-
-SERIAL_CONSOLE ?= "115200 ttyS0"
-EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x40000"
-
-require conf/machine/include/tune-arm926ejs.conf
+WARNING:="${@bb.fatal('\n*\n*\n*    Sorry, There is no dedicated configuration for the Palm Tungsten T2,\n*    because \
+its very similar to the Palm Tungsten T. Use MACHINE = \"palmtt\".\n*\n*\n')}"
