ep93xx: use the super duper generic kernel

--- a/conf/machine/ep93xx.conf
+++ b/conf/machine/ep93xx.conf
@@ -6,7 +6,7 @@
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t"
 
-PREFERRED_PROVIDER_virtual/kernel = "${MACHINE}-kernel"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 #don't try to access tty1
