conf/machine/: Add new screen parameter variables for a bunch of machines.

--- a/conf/machine/h1940.conf
+++ b/conf/machine/h1940.conf
@@ -10,13 +10,15 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-h1940"
 
 # Set features for task-base
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm bluetooth irda usbgadget screen"
 
 
 # Some extra configuration
 VOLATILE_STORAGE_SIZE = "64"
 ROOT_FLASH_SIZE = "32"
-GUI_MACHINE_CLASS = "smallscreen"
 SERIAL_CONSOLE = "115200 ttySAC2 vt100"
 USE_VT = "0"
 
