--- a/conf/machine/hx2000.conf
+++ b/conf/machine/hx2000.conf
@@ -25,7 +25,9 @@ PCMCIA_MANAGER = "pcmciautils"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
 require conf/machine/include/tune-xscale.conf
