--- a/conf/machine/h1910.conf
+++ b/conf/machine/h1910.conf
@@ -12,7 +12,9 @@ require conf/machine/include/tune-xscale.conf
 
 VOLATILE_STORAGE_SIZE = "64"
 ROOT_FLASH_SIZE = "16"
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda usbgadget screen"
 
 #
