--- a/conf/machine/h2200.conf
+++ b/conf/machine/h2200.conf
@@ -14,9 +14,9 @@ require conf/machine/include/tune-xscale.conf
 #Set some hints for metadata  
 VOLATILE_STORAGE_SIZE = "64"
 ROOT_FLASH_SIZE = "32"
-GUI_MACHINE_CLASS = "smallscreen"
-
-#Set features for task-base 
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda usbgadget screen"
 
 #
