--- a/conf/machine/h3600.conf
+++ b/conf/machine/h3600.conf
@@ -14,7 +14,9 @@ require conf/machine/include/tune-strongarm.conf
 ROOT_FLASH_SIZE = "16"
 # h3630 have 32Mb only
 VOLATILE_STORAGE_SIZE = "64"
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda usbgadget  screen"
 
 #
