--- a/conf/machine/h6300.conf
+++ b/conf/machine/h6300.conf
@@ -12,7 +12,9 @@ PACKAGE_EXTRA_ARCHS = "arm armv4 armv4t"
 #Use OMAP 1510 cpu specifig arm9tdmi options for gcc
 require conf/machine/include/tune-arm9tdmi.conf
 
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda bluetooth wifi usbgadget screen"
 
 #
