--- a/conf/machine/htcuniversal.conf
+++ b/conf/machine/htcuniversal.conf
@@ -14,7 +14,9 @@ require conf/machine/include/tune-xscale.conf
 # Uncomment this to use iwmmxt optimizations. Remove the above xscale stuff first
 #require conf/machine/include/tune-iwmmxt.conf
 
-GUI_MACHINE_CLASS = "bigscreen"
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "480"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_FEATURES = "kernel26 apm alsa irda usbgadget usbhost keyboard touchscreen screen wifi bluetooth phone"
 
 #
