--- a/conf/machine/hx4700.conf
+++ b/conf/machine/hx4700.conf
@@ -16,7 +16,9 @@ require conf/machine/include/tune-xscale.conf
 
 ROOT_FLASH_SIZE = "80"
 VOLATILE_STORAGE_SIZE = "64"
-GUI_MACHINE_CLASS = "bigscreen"
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "480"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda wifi usbgadget screen"
 
 #
