--- a/conf/machine/htcwallaby.conf
+++ b/conf/machine/htcwallaby.conf
@@ -12,7 +12,9 @@ require conf/machine/include/tune-strongarm.conf
 
 ROOT_FLASH_SIZE = "16" 
 VOLATILE_STORAGE_SIZE = "32"
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda usbgadget screen phone"
 
 #
