--- a/conf/machine/magician.conf
+++ b/conf/machine/magician.conf
@@ -16,7 +16,9 @@ require conf/machine/include/tune-xscale.conf
 
 ROOT_FLASH_SIZE = "80"
 VOLATILE_STORAGE_SIZE = "64"
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 phone screen touchscreen usbgadget usbhost"
 
 #
