--- a/conf/machine/rx1950.conf
+++ b/conf/machine/rx1950.conf
@@ -13,7 +13,9 @@ require conf/machine/include/tune-arm920t.conf
 
 ROOT_FLASH_SIZE = "32"
 VOLATILE_STORAGE_SIZE = "64"
-GUI_MACHINE_CLASS = "smallscreen"
+MACHINE_GUI_CLASS = "smallscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "240"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa irda bluetooth wifi usbgadget screen"
 
 #
