conf/machine/: Yet more of MACHINE_DISPLAY_*.

--- a/conf/machine/aximx50v.conf
+++ b/conf/machine/aximx50v.conf
@@ -4,4 +4,6 @@
 
 require conf/machine/aximx50.conf
 
-GUI_MACHINE_CLASS = "bigscreen"
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "480"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
