--- a/conf/machine/palmtt.conf
+++ b/conf/machine/palmtt.conf
@@ -5,9 +5,12 @@
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv5te"
 
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "320"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
+
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-palm-omap1"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 
 SERIAL_CONSOLE ?= "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x40000"
