--- a/conf/machine/palmld.conf
+++ b/conf/machine/palmld.conf
@@ -6,6 +6,9 @@ require conf/machine/include/palm.conf
 
 ROOT_FLASH_SIZE = "100"
 
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "320"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 MACHINE_FEATURES += "pcmcia wifi"
 
 
