--- a/conf/machine/palmtx.conf
+++ b/conf/machine/palmtx.conf
@@ -4,13 +4,14 @@
 
 require conf/machine/include/palm.conf
 
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "320"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 MACHINE_FEATURES += "pcmcia wifi"
 
 ROOT_FLASH_SIZE = "100"
 
 SERIAL_CONSOLE = "115200 ttyS0"
-
-GUI_MACHINE_CLASS = "bigscreen"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
                            kernel-module-pxapwm-bl \
