--- a/conf/machine/palmz72.conf
+++ b/conf/machine/palmz72.conf
@@ -5,10 +5,11 @@
 require conf/machine/include/palm.conf
 
 ROOT_FLASH_SIZE = "100"
+MACHINE_GUI_CLASS = "bigscreen"
+MACHINE_DISPLAY_WIDTH_PIXELS = "320"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 
 SERIAL_CONSOLE = "115200 ttyS0"
-
-GUI_MACHINE_CLASS = "bigscreen"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
 require conf/machine/include/tune-thumb.conf
