--- a/conf/machine/spitz.conf
+++ b/conf/machine/spitz.conf
@@ -11,3 +11,7 @@ PACKAGE_EXTRA_ARCHS += "iwmmxt"
 IMAGE_FSTYPES += "tar.gz"
 
 ROOT_FLASH_SIZE = "100"
+
+MACHINE_GUI_CLASS=bigscreen
+MACHINE_DISPLAY_WIDTH_PIXELS=640
+MACHINE_DISPLAY_HEIGHT_PIXELS=480
