--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -41,7 +41,9 @@ FEED_ARCH ?= "${TARGET_ARCH}"
 
 FEED_ARCH_ep93xx 	= "armv4t"
 FEED_ARCH_h6300		= "armv4t"
-FEED_ARCH_fic-gta01     = "armv4t"
+FEED_ARCH_fic-gta01	= "armv4t"
+FEED_ARCH_fic-gta02 = "armv4t"
+FEED_ARCH_fic-hxd8	= "armv4t"
 
 #armv5t machines
 
@@ -152,7 +154,7 @@ PREFERRED_VERSION_gtk+             = "2.10.14"
 
 # newer poppler cvs breaks some apps, fix until popper 6 and apps
 # catch up with api changes
-PREFERRED_VERSION_poppler          = "0.5.4"
+# PREFERRED_VERSION_poppler          = "0.5.4"
 
 # older gtk-webcore releases don't work on ARM/EABI
 # We need to switch to a fixed SRCDATE or release as soon as possible 
