--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -1,8 +1,10 @@
 #-----------------------------------------------------------------------------
 #@TYPE: Distribution
-#@NAME: OpenMoKo
-#@DESCRIPTION: Linux Distribution Configuration for the FIC GTA01 Project
+#@NAME: OpenMoko
+#@DESCRIPTION: Linux Distribution Configuration for the OpenMoko Platform
 #-----------------------------------------------------------------------------
+
+require conf/distro/angstrom-2007.1.conf
 
 #
 # Header
@@ -11,18 +13,3 @@ DISTRO_NAME = "OpenMoKo"
 DISTRO_VERSION = ".dev-snapshot-${DATE}"
 #DISTRO_TYPE = "release"
 DISTRO_TYPE = "debug"
-
-require conf/distro/include/openmoko.inc
-
-# Toolchain
-PREFERRED_VERSION_gcc ?= "4.1.1"
-PREFERRED_VERSION_gcc-cross ?= "4.1.1"
-PREFERRED_VERSION_gcc-cross-initial ?= "4.1.1"
-PREFERRED_VERSION_binutils ?= "2.17.50.0.5"
-PREFERRED_VERSION_binutils-cross ?= "2.17.50.0.5"
-PREFERRED_VERSION_linux-libc-headers ?= "2.6.18"
-# 2.5 has less bugs, but crashes dropbear :/
-PREFERRED_VERSION_glibc ?= "2.4"
-PREFERRED_VERSION_glibc-intermediate ?= "2.4"
-
-PREFERRED_VERSION_lmsensors-apps ?= "2.10.1"
