conf/machine/xilinx-ml403.conf : Change url for board description

--- a/conf/machine/xilinx-ml403.conf
+++ b/conf/machine/xilinx-ml403.conf
@@ -1,7 +1,9 @@
+# Copyright (C) 2007, Stelios Koroneos - Digital OPSiS, All Rights Reserved
+# Released under the MIT license (see packages/COPYING)
 #@TYPE: Machine
 #@Name: Xilinx ML403 FPGA Development Platform
-#@DESCRIPTION: Machine configuration for Xilinx ML403 (softcore ppc) development platform 
-\http://www.xilinx.com/xlnx/xebiz/designResources/ip_product_details.jsp?key=HW-V4-ML403-USA&iLanguageID=1
+#@DESCRIPTION: Machine configuration for Xilinx ML403 (softcore ppc) development platform \
+http://www.xilinx.com/ml403
 
 TARGET_ARCH = "powerpc"
 PACKAGE_EXTRA_ARCHS = "ppc405"
