--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -35,8 +35,8 @@ ROOT_FLASH_SIZE = "60"
 # extra jffs2 tweaks
 EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 --pad -n"
 
-# build tools
-EXTRA_IMAGEDEPENDS += "sjf2410-linux-native"
+# build / upload tools
+EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
 
 # tune for S3C24x0
 include conf/machine/include/tune-arm920t.conf
