--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------
 #@TYPE: Machine
 #@NAME: FIC GTA02 (Neo1973)
-#@DESCRIPTION: Machine configuration for the FIC Neo1973/2 GSM phone
+#@DESCRIPTION: Machine configuration for the FIC Neo1973.2 GSM phone
 #-----------------------------------------------------------------------------
 
 TARGET_ARCH = "arm"
@@ -32,10 +32,10 @@ SERIAL_CONSOLE = "115200 ttySAC2"
 ROOT_FLASH_SIZE = "256"
 
 # extra jffs2 tweaks
-EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 -n"
+EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 --pad -n"
 
-# build tools
-EXTRA_IMAGEDEPENDS += "sjf2410-linux-native"
+# build / upload tools
+EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
 
 # tune for S3C24x0
 include conf/machine/include/tune-arm920t.conf
