--- a/conf/machine/palmt650.conf
+++ b/conf/machine/palmt650.conf
@@ -10,7 +10,8 @@ SERIAL_CONSOLE = "115200 ttyS1"
 
 GUI_MACHINE_CLASS = "bigscreen"
 
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-snd-pxa2xx-ac97 \
+                           kernel-module-pxa27x-keyboard \
                            kernel-module-pxapwm-bl \
                            kernel-module-wm97xx-ts"
 
