--- a/conf/machine/palmt680.conf
+++ b/conf/machine/palmt680.conf
@@ -1,10 +1,8 @@
 #@TYPE: Machine
-#@NAME: Palm TC
+#@NAME: Palm Treo 680
 #@DESCRIPTION: Machine configuration for the Palm TX
 
 require conf/machine/include/palm.conf
-
-MACHINE_FEATURES += "wifi"
 
 ROOT_FLASH_SIZE = "100"
 
@@ -12,3 +10,5 @@ SERIAL_CONSOLE = "115200 ttyS0"
 
 GUI_MACHINE_CLASS = "bigscreen"
 
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
+                           kernel-module-wm97xx-ts"
