bitbake.conf: Forcefully expand the cache path - we don't want this to change beyond this point

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -462,6 +462,10 @@ IMAGE_ROOTFS_SIZE_ext2.gz ?= "65536"
 IMAGE_ROOTFS_SIZE_ext3 ?= "65536"
 IMAGE_ROOTFS_SIZE_ext3.gz ?= "65536"
 
+# Forcefully set CACHE now so future changes to things like 
+# MACHINE don't change the path to the cache
+CACHE := "${CACHE}"
+
 ##################################################################
 # Magic Cookie for SANITY CHECK
 ##################################################################
