It's OpenMoko not OpenMoKo.

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -9,7 +9,7 @@ require conf/distro/angstrom-2007.1.conf
 #
 # Header
 #
-DISTRO_NAME = "OpenMoKo"
+DISTRO_NAME = "OpenMoko"
 DISTRO_VERSION = ".dev-snapshot-${DATE}"
 #DISTRO_TYPE = "release"
 DISTRO_TYPE = "debug"
