openmoko: move NOW srcdates to its own include file and only include it in the openmoko distro

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -5,6 +5,8 @@
 #-----------------------------------------------------------------------------
 
 require conf/distro/angstrom-2007.1.conf
+require conf/distro/include/openmoko-srcdate-now.inc
+
 
 #
 # Header
