openmoko.conf: Use mirrors to balance load and set FEED_URIS

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -15,3 +15,12 @@ DISTRO_NAME = "OpenMoko"
 DISTRO_VERSION = ".dev-snapshot-${DATE}"
 #DISTRO_TYPE = "release"
 DISTRO_TYPE = "debug"
+
+CVS_TARBALL_STASH = "http://downloads.openmoko.org/sources/"
+
+PREMIRRORS = "(ftp|http)://.*/.*/ http://downloads.openmoko.org/sources/"
+
+FEED_URIS = "\
+  all##http://buildhost.openmoko.org/tmp/deploy/ipk/all \
+  armv4t##http://buildhost.openmoko.org/tmp/deploy/ipk/armv4t \
+  fic-gta01##http://buildhost.openmoko.org/tmp/deploy/ipk/fic-gta01"
