conf/openmoko.conf: change DISTRO name to make openmoko override active

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -11,6 +11,7 @@ require conf/distro/include/openmoko-srcdate-now.inc
 #
 # Header
 #
+DISTRO = "openmoko"
 DISTRO_NAME = "OpenMoko"
 DISTRO_VERSION = ".dev-snapshot-${DATE}"
 #DISTRO_TYPE = "release"
