--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -33,7 +33,7 @@ MACHINE_EXTRA_RRECOMMENDS = "\
 ROOT_FLASH_SIZE = "60"
 
 # extra jffs2 tweaks
-EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 --pad -n"
+EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x4000 --pad -n"
 
 # build / upload tools
 EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
