--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -32,7 +32,7 @@ SERIAL_CONSOLE = "115200 ttySAC2"
 ROOT_FLASH_SIZE = "256"
 
 # extra jffs2 tweaks
-EXTRA_IMAGECMD_jffs2 = "--eraseblock=0x4000 --pad -n"
+EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x4000 --pad -n"
 
 # build / upload tools
 EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
