openmoko.conf: add angstrom as additional OVERRIDE

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -7,7 +7,6 @@
 require conf/distro/angstrom-2007.1.conf
 require conf/distro/include/openmoko-srcdate-now.inc
 
-
 #
 # Header
 #
@@ -17,6 +16,8 @@ DISTRO_VERSION = ".dev-snapshot-${DATE}"
 #DISTRO_TYPE = "release"
 DISTRO_TYPE = "debug"
 
+OVERRIDES = "local:${MACHINE}:${DISTRO}:angstrom:${TARGET_OS}:${TARGET_ARCH}:build-${BUILD_OS}:fail-fast:pn-${PN}"
+
 CVS_TARBALL_STASH = "http://downloads.openmoko.org/sources/"
 
 PREMIRRORS = "(ftp|http)://.*/.*/ http://downloads.openmoko.org/sources/"
@@ -25,3 +26,4 @@ FEED_URIS = "\
   all##http://buildhost.openmoko.org/tmp/deploy/ipk/all \
   armv4t##http://buildhost.openmoko.org/tmp/deploy/ipk/armv4t \
   fic-gta01##http://buildhost.openmoko.org/tmp/deploy/ipk/fic-gta01"
+
