angstrom: adjust xorg versions

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -233,7 +233,7 @@ PREFERRED_VERSION_wpa-supplicant = "0.5.5"
 #Loads preferred versions from files, these have weak assigments (?=), so put them at the bottom
 require conf/distro/include/preferred-gpe-versions-2.8.inc
 require conf/distro/include/preferred-e-versions.inc
-require conf/distro/include/preferred-xorg-versions-X11R7.2.inc
+require conf/distro/include/preferred-xorg-versions.inc
 
 
 # Virtuals:
