angstrom: use full x11 till the feeds have been cleared of packages depending on it

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -261,7 +261,7 @@ PREFERRED_PROVIDER_hostap-modules_hx4700            ?= "hostap-modules"
 PREFERRED_PROVIDER_virtual/db           ?= "db"
 PREFERRED_PROVIDER_virtual/db-native    ?= "db-native"
 PREFERRED_PROVIDER_virtual/libsdl       ?= "libsdl-x11"
-PREFERRED_PROVIDER_virtual/libx11       ?= "diet-x11"
+PREFERRED_PROVIDER_virtual/libx11       ?= "libx11"
 PREFERRED_PROVIDER_virtual/libxine      ?= "libxine-x11"
 PREFERRED_PROVIDER_virtual/xserver      ?= "xserver-kdrive"
 
