zaurus: Rename included conf files to .inc

--- a/conf/machine/tosa.conf
+++ b/conf/machine/tosa.conf
@@ -2,7 +2,7 @@
 #@NAME: Sharp Zaurus SL-6000
 #@DESCRIPTION: Machine configuration for the PXA255 based Sharp Zaurus SL-6000 device
 
-require conf/machine/include/zaurus-2.6.conf
+require conf/machine/include/zaurus-2.6.inc
 
 # newer kernels does not build
 PREFERRED_VERSION_linux-rp = "2.6.17"
