--- a/conf/machine/poodle.conf
+++ b/conf/machine/poodle.conf
@@ -2,6 +2,6 @@
 #@NAME: Sharp Zaurus SL-B500, Sharp Zaurus SL-5600
 #@DESCRIPTION: Machine configuration for the PXA250 based Sharp Zaurus SL-B500 and SHarp Zaurus SL-5600 devices
 
-require conf/machine/include/zaurus-2.6.conf
+require conf/machine/include/zaurus-2.6.inc
 
 ROOT_FLASH_SIZE = "22"
