--- a/conf/machine/spitz.conf
+++ b/conf/machine/spitz.conf
@@ -2,8 +2,8 @@
 #@NAME: Sharp Zaurus SL-C3000
 #@DESCRIPTION: Machine configuration for the Sharp Zaurus SL-C3000 device
 
-require conf/machine/include/zaurus-2.6.conf
-require conf/machine/include/zaurus-clamshell.conf
+require conf/machine/include/zaurus-2.6.inc
+require conf/machine/include/zaurus-clamshell.inc
 
 PIVOTBOOT_EXTRA_RDEPENDS += "pivotinit ${PCMCIA_MANAGER}"
 
