--- a/conf/machine/at91sam9263ek.conf
+++ b/conf/machine/at91sam9263ek.conf
@@ -11,9 +11,11 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 #don't try to access tty1
 USE_VT = "0"
 
-MACHINE_FEATURES = "kernel26 apm alsa ext2 pcmcia usbhost usbgadget screen"
+MACHINE_FEATURES = "kernel26 alsa ext2 usbhost usbgadget screen"
 
 # used by sysvinit_2
 SERIAL_CONSOLE = "115200 ttyS0"
+
+EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x20000 -n"
 
 require conf/machine/include/tune-arm926ejs.conf
