palm machine configs: fix names in comments

--- a/conf/machine/palmt680.conf
+++ b/conf/machine/palmt680.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Palm Treo 680
-#@DESCRIPTION: Machine configuration for the Palm TX
+#@DESCRIPTION: Machine configuration for the Palm Treo 680
 
 require conf/machine/include/palm.conf
 
