--- a/conf/machine/palmtc.conf
+++ b/conf/machine/palmtc.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Palm TC
-#@DESCRIPTION: Machine configuration for the Palm TX
+#@DESCRIPTION: Machine configuration for the Palm Tungsten C
 
 require conf/machine/include/palm.conf
 
