--- a/conf/machine/palmtt.conf
+++ b/conf/machine/palmtt.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Palm Tungsten T
-#@DESCRIPTION: Machine configuration for Palm Zire 71
+#@DESCRIPTION: Machine configuration for Palm Tungsten T/T2
 
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv5te"
