angstrom-2008.1: fix typo in comments

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -10,7 +10,7 @@
 # is aiming for stability and a release.
 # Use this at your own risk, we welcome bugreports filed at 
 #    http://bugs.openembedded.org
-# In doubt, use DSITRO="angstrom-2007.1"
+# In doubt, use DISTRO="angstrom-2007.1"
 
 require conf/distro/angstrom-2007.1.conf
 
