--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -152,7 +152,6 @@ FILESDIR = "${@bb.which(bb.data.getVar('FILESPATH', d, 1), '.')}"
 
 TMPDIR = "${TOPDIR}/tmp"
 CACHE = "${TMPDIR}/cache${@['', '/' + str(bb.data.getVar('MACHINE', d, 1))][bool(bb.data.getVar('MACHINE', d, 1))]}"
-DL_DIR = "${TMPDIR}/downloads"
 CVSDIR = "${DL_DIR}/cvs"
 SVNDIR = "${DL_DIR}/svn"
 GITDIR = "${DL_DIR}/git"
@@ -467,6 +466,7 @@ require conf/sanity.conf
 # Weak variables (usually to retain backwards compatibility)
 ##################################################################
 
+DL_DIR ?= "${TMPDIR}/downloads"
 IMAGE_FSTYPES ?= "jffs2"
 PCMCIA_MANAGER ?= "pcmcia-cs"
 MACHINE_TASK_PROVIDER ?= "task-base"
