amsdelta: update to recent OE standards

--- a/conf/machine/amsdelta.conf
+++ b/conf/machine/amsdelta.conf
@@ -3,16 +3,15 @@
 #@DESCRIPTION: Machine configuration for the Amstrad E3
 
 TARGET_ARCH = "arm"
-
-TARGET_FPU = "soft"
+PACKAGE_EXTRA_ARCHS = "armv4t"
 
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
+XSERVER = "xserver-kdrive-fbdev"
 PREFERRED_PROVIDER_virtual/kernel = "linux-amsdelta-2.6"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 
 EXTRA_IMAGEDEPENDS += "u-boot linux-amsdelta-2.6"
 
-BOOTSTRAP_EXTRA_RDEPENDS += "modutils-collateral mtd-utils udev"
+MACHINE_FEATURES = "screen usbhost usbgadget kernel26 apm alsa"
 
 SERIAL_CONSOLE ?= "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x40000"
