gumstix: add PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te "

--- a/conf/machine/gumstix.conf
+++ b/conf/machine/gumstix.conf
@@ -3,6 +3,7 @@
 #@DESCRIPTION:  Gumstix pxa2xx boards
 
 TARGET_ARCH = "arm"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te "
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-gumstix"
 
