h1940: arm920t can't do armv5

--- a/conf/machine/h1940.conf
+++ b/conf/machine/h1940.conf
@@ -2,7 +2,7 @@
 #@NAME: h1940
 #@DESCRIPTION: Machine configuration for the HP iPAQ h1930 and h1940
 
-PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t"
 TARGET_ARCH = "arm"
 
 # Set preferred providers
