logicpd-pxa270: fix package-extra-archs

--- a/conf/machine/logicpd-pxa270.conf
+++ b/conf/machine/logicpd-pxa270.conf
@@ -7,7 +7,7 @@ PREFERRED_VERSION_logicpd-pxa270 = "2.6.19.2"
 GUI_MACHINE_CLASS = "smallscreen"
 
 PREFERRED_PROVIDER_virtual/kernel = "${MACHINE}"
-PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5te"
 
 require conf/machine/include/tune-xscale.conf
 
