--- a/conf/machine/mtx-3.conf
+++ b/conf/machine/mtx-3.conf
@@ -8,24 +8,19 @@
 # TARGET_ARCH should be set here in the machine configuration.
 # For compiling the kernel, ARCH will be derived form it by kernel-arch.bbclass 
 TARGET_ARCH = "arm"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te "
+require conf/machine/include/tune-arm926ejs.conf
 
-PACKAGE_ARCHS = "all arm ${MACHINE}"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-mtx-3"
 
 EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 -n"  
-
-TARGET_CC_ARCH = "-march=armv5te"
-#-mtune=arm926ejs"
 
 USE_DEVFS = "1"
 USE_VT = "0"
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
 
 BOOTSTRAP_EXTRA_RDEPENDS += ""
-
-#PREFERRED_VERSION_yamon = "2.24"
-
 
 # FIXME: old srec files as mtx-2 used to do it ... this may need to get adapted sometime!
 
