--- a/conf/machine/mtx-3a.conf
+++ b/conf/machine/mtx-3a.conf
@@ -2,12 +2,10 @@
 #@NAME: 4G Systems mtx-3a
 #@DESCRIPTION: Machine configuration for the mtx-3a 
 
+include conf/machine/mtx-3.conf
+
 TARGET_ARCH = "arm"
-PACKAGE_ARCHS = "all arm ${MACHINE}"
 PREFERRED_PROVIDER_virtual/kernel = "linux-mtx-3a"
 EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 -n"  
-TARGET_CC_ARCH = "-march=armv5te"
-USE_DEVFS = "1"
 USE_VT = "0"
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
-BOOTSTRAP_EXTRA_RDEPENDS += ""
