--- a/conf/machine/triton.conf
+++ b/conf/machine/triton.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Machine configuration for the XScale based triton boards from KaRo Electronics 
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv5te"
+PACKAGE_EXTRA_ARCHS = "armv4t armv5te"
 PREFERRED_PROVIDER_virtual/kernel = "triton-kernel"
 
 BOOTSTRAP_EXTRA_RDEPENDS = "virtual/kernel"
