angstrom: add FEED_ARCH for blackfin

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -33,6 +33,9 @@ IMAGE_LINGUAS = '${@base_less_or_equal("ROOT_FLASH_SIZE", "16", "", "en-gb", d)}
 
 FEED_ARCH ?= "${TARGET_ARCH}"
 
+#blackfin machines
+FEED_ARCH_bfin          = "blackfin"
+
 #armv4t machines
 
 FEED_ARCH_acern30 	= "armv4t"
