--- a/conf/machine/davinci-dvevm.conf
+++ b/conf/machine/davinci-dvevm.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Machine configuration for the TI Davinci EVM board
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv5te"
+PACKAGE_EXTRA_ARCHS = "armv4t armv5te"
 
 HOTPLUG = "udev"
 
