--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -18,19 +18,19 @@ require conf/distro/angstrom-2007.1.conf
 DISTRO_VERSION = "2008.1-test-${DATE}"
 DISTRO_REVISION = "0"
 
-PREFERRED_VERSION_gcc               ?= "4.2.1"
-PREFERRED_VERSION_gcc-cross         ?= "4.2.1"
+PREFERRED_VERSION_gcc               = "4.2.1"
+PREFERRED_VERSION_gcc-cross         = "4.2.1"
 
-PREFERRED_VERSION_binutils          ?= "2.17.50.0.12"
-PREFERRED_VERSION_binutils-cross    ?= "2.17.50.0.12"
-PREFERRED_VERSION_binutils-cross-sdk ?= "2.17.50.0.12"
+PREFERRED_VERSION_binutils          = "2.17.50.0.12"
+PREFERRED_VERSION_binutils-cross    = "2.17.50.0.12"
+PREFERRED_VERSION_binutils-cross-sdk = "2.17.50.0.12"
 
 #This is unrelated to the kernel version, but userspace apps (e.g. HAL) require a recent version to build against
-PREFERRED_VERSION_linux-libc-headers ?= "2.6.22"
+PREFERRED_VERSION_linux-libc-headers = "2.6.22"
 
-#Prefer glibc 2.5 and uclibc 0.9.29, these have had the most testing.
-PREFERRED_VERSION_glibc ?= "2.6"
-PREFERRED_VERSION_glibc-intermediate ?= "2.6"
-PREFERRED_VERSION_glibc-initial ?= "2.6"
+#Prefer glibc 2.6 and uclibc 0.9.29, these have had the most testing.
+PREFERRED_VERSION_glibc = "2.6"
+PREFERRED_VERSION_glibc-intermediate = "2.6"
+PREFERRED_VERSION_glibc-initial = "2.6"
 
 
