angstrom: armv6 tweaks

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -123,6 +123,11 @@ FEED_ARCH_triton 	= "armv5te"
 FEED_ARCH_ixp4xxbe 	= "armv5teb"
 FEED_ARCH_nslu2be 	= "armv5teb"
 
+# armv6
+
+FEED_ARCH_mx31ads 	= "armv6"
+FEED_ARCH_nokia800	= "armv6"  
+ 
 #i486 machines
 FEED_ARCH_geodegx 	= "i486"
 FEED_ARCH_geodelx 	= "i486"
