--- a/conf/machine/include/tune-arm1136jf-s.conf
+++ b/conf/machine/include/tune-arm1136jf-s.conf
@@ -1,2 +1,2 @@
-TARGET_CC_ARCH = "-march=armv6 -mtune=arm1136jf-s -mfpu=vfp"
+TARGET_CC_ARCH = "-march=armv6j -mtune=arm1136jf-s -mfpu=vfp -mfloat-abi=softfp"
 PACKAGE_ARCH = "armv6"
