--- a/packages/perl/perl-5.8.8/Makefile.patch
+++ b/packages/perl/perl-5.8.8/Makefile.patch
@@ -1,8 +1,18 @@
 Index: perl-5.8.8/Cross/Makefile
 ===================================================================
---- perl-5.8.8.orig/Cross/Makefile	2004-01-13 07:44:01.000000000 +1100
-+++ perl-5.8.8/Cross/Makefile	2007-06-14 12:40:44.000000000 +1000
-@@ -12,7 +12,7 @@
+--- perl-5.8.8.orig/Cross/Makefile	2004-01-12 21:44:01.000000000 +0100
++++ perl-5.8.8/Cross/Makefile	2007-08-15 00:15:18.000000000 +0200
+@@ -2,7 +2,8 @@
+ #
+ ## $Id: Makefile,v 1.7 2004/01/12 15:41:02 red Exp red $
+ 
+-export TOPDIR=${shell pwd}
++override TOPDIR=${shell pwd}
++export TOPDIR
+ include $(TOPDIR)/config
+ export CFLAGS
+ export SYS=$(ARCH)-$(OS)
+@@ -12,7 +13,7 @@
  
  export CC = $(CROSS)gcc
  export CXX = $(CROSS)g++
@@ -11,7 +21,7 @@ Index: perl-5.8.8/Cross/Makefile
  export STRIP = $(CROSS)strip
  export AR = $(CROSS)ar
  export RANLIB = $(CROSS)ranlib
-@@ -34,21 +34,6 @@
+@@ -34,21 +35,6 @@
  all:
  	@echo Please read the README file before doing anything else.
  
@@ -33,7 +43,7 @@ Index: perl-5.8.8/Cross/Makefile
  perl:
  	@echo Perl cross-build directory is $(TOPDIR)
  	@echo Target arch is $(SYS)
-@@ -58,11 +43,11 @@
+@@ -58,11 +44,11 @@
  	$(TOPDIR)/generate_config_sh config.sh-$(SYS) > $(TOPDIR)/../config.sh
  	cd $(TOPDIR)/.. ; ./Configure -S ; make depend ; make ; make more
  	cd $(TOPDIR)/.. ; mkdir -p fake_config_library ; cp lib/Config.pm fake_config_library
