--- a/conf/machine/htcuniversal.conf
+++ b/conf/machine/htcuniversal.conf
@@ -38,13 +38,15 @@ MACHINE_EXTRA_RRECOMMENDS = "  kernel-module-nls-cp437 \
 				kernel-module-acx \
                                 kernel-module-i2c-algo-bit \
                                 kernel-module-htcuniversal-ts2 \
+                                kernel-module-htcuniversal-phone \
                                 kernel-module-ts-adc-debounce \
+                                kernel-module-htcuniversal-bt \
 				"
 
 #
 # Modules autoload and other boot properties
 #
-module_autoload_acx = "acx"
+#module_autoload_acx = "acx"
 module_autoload_htcuniversal_acx = "htcuniversal_acx"
 module_autoload_snd-pcm-oss = "snd-pcm-oss"
 module_autoload_snd-mixer-oss = "snd-mixer-oss"
