davinci-dvevm : Fix UBOOT_MACHINE. It needs the _config.

--- a/conf/machine/davinci-dvevm.conf
+++ b/conf/machine/davinci-dvevm.conf
@@ -12,7 +12,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-davinci"
 PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 
 PREFERRED_VERSION_u-boot = "git"
-UBOOT_MACHINE = "davinci_dvevm"
+UBOOT_MACHINE = "davinci_dvevm_config"
 
 SERIAL_CONSOLE ?= "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x20000 -n"
