openmoko.conf: set feed URIs for P1-August-Snapshot

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -12,7 +12,7 @@ require conf/distro/include/openmoko-srcdate-now.inc
 #
 DISTRO = "openmoko"
 DISTRO_NAME = "OpenMoko"
-DISTRO_VERSION = ".dev-snapshot-${DATE}"
+DISTRO_VERSION = "P1-August-Snapshot-${DATE}"
 #DISTRO_TYPE = "release"
 DISTRO_TYPE = "debug"
 
@@ -23,7 +23,10 @@ CVS_TARBALL_STASH = "http://downloads.openmoko.org/sources/"
 PREMIRRORS = "(ftp|http)://.*/.*/ http://downloads.openmoko.org/sources/"
 
 FEED_URIS = "\
-  all##http://buildhost.openmoko.org/tmp/deploy/ipk/all \
-  armv4t##http://buildhost.openmoko.org/tmp/deploy/ipk/armv4t \
-  fic-gta01##http://buildhost.openmoko.org/tmp/deploy/ipk/fic-gta01"
-
+  snapshot-all##http://buildhost.openmoko.org/snapshots/2007.08/ipk/all \
+  snapshot-armv4t##http://buildhost.openmoko.org/snapshots/2007.08/ipk/armv4t \
+  snapshot-fic-gta01##http://buildhost.openmoko.org/snapshots/2007.08/ipk/fic-gta01 \
+  \
+  updates-all##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/all \
+  updates-armv4t##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/armv4t \
+  updates-fic-gta01##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/fic-gta01 "
