conf/machine/xilinx-ml403.conf : Set default kernel for the xilinx ml403 the one build from the slab fit tree

--- a/conf/machine/xilinx-ml403.conf
+++ b/conf/machine/xilinx-ml403.conf
@@ -2,18 +2,17 @@
 # Released under the MIT license (see packages/COPYING)
 #@TYPE: Machine
 #@Name: Xilinx ML403 FPGA Development Platform
-#@DESCRIPTION: Machine configuration for Xilinx ML403 (softcore ppc) development platform \
-http://www.xilinx.com/ml403
+#@DESCRIPTION: Machine configuration for Xilinx ML403 (softcore ppc) development platform http://www.xilinx.com/ml403
 
 TARGET_ARCH = "powerpc"
 PACKAGE_EXTRA_ARCHS = "ppc405"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
+PREFERRED_PROVIDER_virtual/kernel = "linux-ml403-slab-2.6.x"
 
 MACHINE_FEATURES = "kernel26 ext2"
 
 TARGET_CPU = "405"
-OLDEST_KERNEL = "2.6.12"
+#OLDEST_KERNEL = "2.6.20"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
