--- a/conf/machine/gumstix.conf
+++ b/conf/machine/gumstix.conf
@@ -15,6 +15,8 @@ module_autoload_g_ether = "g_ether"
 
 OLDEST_KERNEL = "2.6.15"
 
+UBOOT_ENTRYPOINT = "a0008000"
+
 #Assume people have some gumstix extension boards 
 MACHINE_FEATURES = "kernel26 alsa ext2 usbhost usbgadget bluetooth"
 
