--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -36,7 +36,7 @@ ROOT_FLASH_SIZE = "60"
 EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x4000 --pad -n"
 
 # build / upload tools
-EXTRA_IMAGEDEPENDS += "dfu-util-native"
+EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
 
 # tune for S3C24x0
 include conf/machine/include/tune-arm920t.conf
