compulab-pxa270.conf: fix serial console setup for 2.6.22 kernel, set image types needed for NOR flash images and movement toward jffs2 in NAND flash

--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -12,7 +12,10 @@ PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 require conf/machine/include/tune-xscale.conf
 
 # used by sysvinit_2
-SERIAL_CONSOLE ?= "38400 ttySA0"
+# the following is the for the cm-x270 L module
+# I think the W module would use ttyS0, but has
+# not been tested
+SERIAL_CONSOLE ?= "38400 ttyS1"
 
 # used by opie-collections.inc
 ROOT_FLASH_SIZE ?= "32"
@@ -28,4 +31,10 @@ EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 --pad=0x20000 --no-
 	"
 
 MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
+
+# the following is require for building tiny images that can fit in NOR flash.
+# recommend using uclibc, Angstrom, and angstrom-minimal-image bitbake target
+# note, if these are define in your local.conf, they will be overwritten
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS ?= "mtd-utils ipkg"
+IMAGE_FSTYPES ?= "jffs2 tar cpio.gz"
 
