--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -11,10 +11,12 @@ PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 
 require conf/machine/include/tune-xscale.conf
 
-# used by sysvinit_2
+# used by sysvinit_2 package, so rebuild this
+# package if you change the SERIAL_CONSOLE setting
 # the following is the for the cm-x270 L module
 # I think the W module would use ttyS0, but has
-# not been tested
+# not been tested.  This can be overwritten in 
+# local.conf
 SERIAL_CONSOLE ?= "38400 ttyS1"
 
 # used by opie-collections.inc
@@ -32,9 +34,16 @@ EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 --pad=0x20000 --no-
 
 MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
 
-# the following is require for building tiny images that can fit in NOR flash.
-# recommend using uclibc, Angstrom, and angstrom-minimal-image bitbake target
-# note, if these are define in your local.conf, they will be overwritten
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS ?= "mtd-utils ipkg"
-IMAGE_FSTYPES ?= "jffs2 tar cpio.gz"
+# to program the compulab NAND flash, the following scheme is suggested.  Create
+# a small rootfs that can fit in NOR flash using the following config:
+#   - Angstrom distro
+#   - uclibc
+#   - angstrom-minimal-image bitbake target
+#   - put the following in your local.conf
+#     - MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "mtd-utils"
+#     - IMAGE_FSTYPES = "jffs2 tar cpio.gz"
+# now, when you build the angstrom-minimal-image, a cpio.gz will be generated
+# that can be used as an initramfs.  You can boot into this image and then
+# program the main rootfs jffs2 image in NAND flash using mtd-utils
+
 
