compulab-pxa270.conf: use angstrom-minimal-image-with-mtd-utils instead of encouraging image modificatications in local.conf

--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -38,11 +38,10 @@ MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
 # a small rootfs that can fit in NOR flash using the following config:
 #   - Angstrom distro
 #   - uclibc
-#   - angstrom-minimal-image bitbake target
+#   - angstrom-minimal-image-with-mtd-utils bitbake target
 #   - put the following in your local.conf
-#     - MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "mtd-utils"
 #     - IMAGE_FSTYPES = "jffs2 tar cpio.gz"
-# now, when you build the angstrom-minimal-image, a cpio.gz will be generated
+# now, when you build the image, a cpio.gz will be generated
 # that can be used as an initramfs.  You can boot into this image and then
 # program the main rootfs jffs2 image in NAND flash using mtd-utils
 
